--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
                                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                                         <div class="form-group">
                                             <label for="company-name" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">اسم الشركة</label>
-                                            <input type="text" id="company-name" name="company-name" class="form-control" value="شركتي المحدودة">
+                                            <input type="text" id="company-name" name="company-name" class="form-control" value="النمر للتجارة والتوزيع">
                                         </div>
                                         <div class="form-group">
                                             <label for="tax-id" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">الرقم الضريبي</label>
@@ -864,11 +864,11 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="address" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">العنوان</label>
-                                            <textarea id="address" name="address" rows="2" class="form-control">شارع الملك فهد، الرياض، المملكة العربية السعودية</textarea>
+                                            <textarea id="address" name="address" rows="2" class="form-control">منطقة الاستاد أمام نادي سيتي كلوب، طنطا، الغربية، مصر/textarea>
                                         </div>
                                         <div class="form-group">
                                             <label for="contact-info" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">معلومات الاتصال</label>
-                                            <input type="text" id="contact-info" name="contact-info" class="form-control" value="info@mycompany.com - 0123456789">
+                                            <input type="text" id="contact-info" name="contact-info" class="form-control" value="01007700721">
                                         </div>
                                         <div class="form-group">
                                             <label for="currency" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">العملة</label>
@@ -903,7 +903,7 @@
                                                 <span class="mr-2 text-gray-700 dark:text-gray-300">إرسال إشعارات بالبريد الإلكتروني</span>
                                             </label>
                                             <label class="flex items-center">
-                                                <input type="checkbox" name="print-receipt" class="h-4 w-4 text-primary-600 rounded" checked>
+                                                <input type="checkbox" name="print-receipt" class="h-4 w-4 text-primary-600 rounded" unchecked>
                                                 <span class="mr-2 text-gray-700 dark:text-gray-300">طباعة الإيصال تلقائياً بعد البيع</span>
                                             </label>
                                         </div>
