--- a/modules/products.html
+++ b/modules/products.html
@@ -15,11 +15,11 @@
         </div>
         <select id="product-category-filter" class="form-select">
             <option value="">كل التصنيفات</option>
-            <option value="oils">زيوت</option>
-            <option value="rice">أرز</option>
-            <option value="pasta">مكرونة</option>
-            <option value="canned">معلبات</option>
-            <option value="spices">توابل</option>
+            <option value="External">خارجي</option>
+            <option value="Structural">انشائي</option>
+            <option value="Colored">بلاستيك ملون</option>
+            <option value="Cement">اسمنتي</option>
+            <option value="Decorative">ديكوري</option>
             <!-- Add more categories as needed -->
         </select>
         <!-- Add more filters if needed, e.g., stock status -->
@@ -68,12 +68,12 @@
             <div>
                 <label for="product-category-field" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">التصنيف</label>
                 <select id="product-category-field" required class="form-select">
-                    <option value="">اختر التصنيف</option>
-                    <option value="oils">زيوت</option>
-                    <option value="rice">أرز</option>
-                    <option value="pasta">مكرونة</option>
-                    <option value="canned">معلبات</option>
-                    <option value="spices">توابل</option>
+                <option value="">كل التصنيفات</option>
+                <option value="External">خارجي</option>
+                <option value="Structural">انشائي</option>
+                <option value="Colored">بلاستيك ملون</option>
+                <option value="Cement">اسمنتي</option>
+                <option value="Decorative">ديكوري</option>
                     <!-- Add more categories as needed -->
                 </select>
             </div>
