Fix: Add missing IDs to module containers and create dashboard.js

--- a/modules/purchases.html
+++ b/modules/purchases.html
@@ -1,4 +1,4 @@
-<div class="bg-white dark:bg-gray-800 rounded-lg shadow p-4 mb-6">
+<div id="purchases-module" class="bg-white dark:bg-gray-800 rounded-lg shadow p-4 mb-6">
     <div class="flex flex-wrap items-center justify-between mb-4">
         <h3 class="text-lg font-bold">إدارة المشتريات</h3>
         <button id="add-purchase-btn" class="bg-primary hover:bg-primary/90 text-white px-4 py-2 rounded-md text-sm flex items-center">
