--- a/modules/users.html
+++ b/modules/users.html
@@ -1,4 +1,4 @@
-<div class="bg-white dark:bg-gray-800 rounded-lg shadow p-4 mb-6">
+<div id="users-module" class="bg-white dark:bg-gray-800 rounded-lg shadow p-4 mb-6">
     <div class="flex flex-wrap items-center justify-between mb-4">
         <h3 class="text-lg font-bold">إدارة المستخدمين</h3>
         <button id="add-user-btn" class="bg-primary hover:bg-primary/90 text-white px-4 py-2 rounded-md text-sm flex items-center">
