--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 
     <!-- JavaScript Files -->
     <script src="js/main.js"></script>
+    <script src="js/dashboard.js"></script>
     <script src="js/users.js"></script>
     <script src="js/products.js"></script>
     <script src="js/customers.js"></script>
