--- a/modules/accounting.html
+++ b/modules/accounting.html
@@ -1,4 +1,4 @@
-<div class="bg-white dark:bg-gray-800 rounded-lg shadow p-4 mb-6">
+<div id="accounting-module" class="bg-white dark:bg-gray-800 rounded-lg shadow p-4 mb-6">
     <div class="flex flex-wrap items-center justify-between mb-4">
         <h3 class="text-lg font-bold">إدارة الحسابات</h3>
         <div class="flex space-x-2 space-x-reverse">
