--- a/modules/dashboard.html
+++ b/modules/dashboard.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-6">
+<div id="dashboard-module" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-6">
     <div class="bg-white dark:bg-gray-800 p-4 rounded-lg shadow">
         <div class="flex items-center justify-between">
             <div>
