--- a/modules/help.html
+++ b/modules/help.html
@@ -1,4 +1,4 @@
-<div class="bg-white dark:bg-gray-800 rounded-lg shadow p-4 md:p-6 mb-6">
+<div id="help-module" class="bg-white dark:bg-gray-800 rounded-lg shadow p-4 md:p-6 mb-6">
     <h3 class="text-xl md:text-2xl font-bold mb-6 text-gray-800 dark:text-gray-100">مركز المساعدة والدعم</h3>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-6 mb-8">
