--- a/modules/settings.html
+++ b/modules/settings.html
@@ -1,4 +1,4 @@
-<div class="bg-white dark:bg-gray-800 rounded-lg shadow p-4 mb-6">
+<div id="settings-module" class="bg-white dark:bg-gray-800 rounded-lg shadow p-4 mb-6">
     <h3 class="text-xl font-bold mb-6">إعدادات النظام</h3>
 
     <!-- Tabs Navigation -->
