Fix button functionality - remove inline script tags and improve error logging in setupFormToggle

--- a/modules/expenses.html
+++ b/modules/expenses.html
@@ -123,10 +123,6 @@
             </button>
         </div>
     </form>
-</div>
-<script>
-// Module-specific script
-if (window.currentLoadedModule === 'expenses' && typeof initExpensesModule === 'function') {
-    initExpensesModule();
+</div>;
 }
 </script>
