--- a/modules/inventory.html
+++ b/modules/inventory.html
@@ -181,10 +181,6 @@
             </div>
         </form>
     </div>
-</div>
-<script>
-// Module-specific script
-if (window.currentLoadedModule === 'inventory' && typeof initInventoryModule === 'function') {
-    initInventoryModule();
+</div>;
 }
 </script>
